# serverless-and-react-static-site-example

./: cdk.json  package-lock.json  package.json  tsconfig.json
javascript/: .gitignore  Makefile  README.md  cdk.json  package-lock.json  package.json
javascript/lib/: ServerlessDemoStack.ts
javascript/src/: App.tsx  config.ts
javascript/src/common/form-components/: InputField.tsx  TextArea.tsx
javascript/src/forms/: user-feedback-form.tsx
javascript/src/pages/: user-feedback.tsx
lib/: APIGatewayWithLambda.ts  DispatchEmailLambda.ts  ReactStaticClient.ts  ServerlessDemoStack.ts  TLSHostedZone.ts  serverless-demo-stack.ts
python/: .gitignore  Makefile  app.py  pyproject.toml  requirements.txt
python/lambda_handler/: index.py
python/python/: python_stack.py
python/tests/: test_index.py
src/: config.ts  index.css
src/common/form-components/: TextArea.tsx
src/forms/: user-feedback-form.tsx
src/lambda-functions/: DispatchEmail.js
test/: serverless-demo.test.ts
